versioned_docs/version-7.0.0/api/lineIntersect.mdx
---
title: lineIntersect
---

import * as turf from "turf-next";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>

### Description

Takes any LineString or Polygon GeoJSON and returns the intersecting point(s).

### Parameters

| Name                                    | Type                                                         | Description                                                    |
| --------------------------------------- | ------------------------------------------------------------ | -------------------------------------------------------------- |
| line1                                   | **[GeoJSON](https://tools.ietf.org/html/rfc7946#section-3)** | any LineString or Polygon                                      |
| line2                                   | **[GeoJSON](https://tools.ietf.org/html/rfc7946#section-3)** | any LineString or Polygon                                      |
| options<i>?</i>                         | **Object**                                                   | Optional parameters _(default \{\})_                           |
| options.removeDuplicates<i>?</i>        | **boolean**                                                  | remove duplicate intersections _(default true)_                |
| options.ignoreSelfIntersections<i>?</i> | **boolean**                                                  | ignores self-intersections on input features _(default false)_ |

### Returns

<ul>
  **[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3)\<[Point](https://tools.ietf.org/html/rfc7946#section-3.1.2)\>** point(s) that intersect both

</ul>

### Examples

```javascript
var line1 = turf.lineString([
  [126, -11],
  [129, -21],
]);
var line2 = turf.lineString([
  [123, -18],
  [131, -14],
]);
var intersects = turf.lineIntersect(line1, line2);
```

export function Map0() {
  "use strict";

  // jsdoc example start
  var line1 = turf.lineString([
    [126, -11],
    [129, -21],
  ]);
  var line2 = turf.lineString([
    [123, -18],
    [131, -14],
  ]);
  var intersects = turf.lineIntersect(line1, line2);

  //addToMap
  var addToMap = { line1, line2, intersects };
  // jsdoc example end

  return <ExampleMap addToMap={addToMap} />;
}

<!-- prettier-ignore -->
<BrowserOnly>{() => <Map0 />}</BrowserOnly>

### Installation

```javascript
$ npm install @turf/line-intersect

import { lineIntersect } from "@turf/line-intersect";
const result = lineIntersect(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.lineIntersect(...);
```
